Pages source update

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youth Harm Reduction Stories</title>
 
-    <link rel="shortcut icon" type="image/x-icon" href="/assets/media/images/utils/favicon.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/media/images/utils/favicon.ico"./>
 
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" >
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="/assets/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"./>
+    <link rel="stylesheet" href="./assets/css/all.min.css"./>
 
 </head>
 <body>
@@ -35,7 +35,7 @@
             <a href="#stories" class="nav-link anchor-scroll">Stories</a>
             <a href="#events" class="nav-link anchor-scroll">Events</a>
             <a href="#footer" class="nav-link anchor-scroll">Contacts</a>
-            <a href="/pages/resources.html" class="nav-link nav-external">Resources</a>
+            <a href="./pages/resources.html" class="nav-link nav-external">Resources</a>
           </nav>
         </div>
   
@@ -45,8 +45,8 @@
 
     <header id="intro-section" class="header-section active-trigger">
 
-      <video id="intro-video" class="intro-video-box" preload="auto" poster="/assets/media/intro-poster.jpg" loop>
-        <source src="/assets/media/videos/Intro-Video.mp4" type="video/mp4">
+      <video id="intro-video" class="intro-video-box" preload="auto" poster="./assets/media/intro-poster.jpg" loop>
+        <source src="./assets/media/videos/Intro-Video.mp4" type="video/mp4">
         Your browser does not support the video tag. 
       </video>
 
@@ -59,7 +59,7 @@
 
             <button type="button" id="intro-play" class="primary-btn with-l-ico watch-intro">
               <span class="btn-ico-left">
-                <svg xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16.933333 21.1666675" version="1.1" x="0px" y="0px"><g transform="translate(0,-280.06665)"><path style="opacity:1;fill:#FFFFFF;fill-opacity:1;fill-rule:nonzero;stroke:none;stroke-width:0.08356888;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;paint-order:fill markers stroke" d="m 8.4666477,282.71249 a 1.9071424,1.9071424 0 0 0 -1.5724381,0.82819 l -4.6707064,8.08985 a 1.9071424,1.9071424 0 0 0 0,1.6e-4 1.9071424,1.9071424 0 0 0 0.06893,1.77582 1.9071424,1.9071424 0 0 0 1.5235488,0.94764 h 9.301165 a 1.9071424,1.9071424 0 0 0 1.523711,-0.94764 1.9071424,1.9071424 0 0 0 0.06893,-1.77598 l -4.660603,-8.07242 a 1.9071424,1.9071424 0 0 0 -1.5825415,-0.84562 z"/></g></svg>
+                <svg xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16.933333 21.1666675" version="1.1" x="0px" y="0px"><g transform="translate(0,-280.06665)"><path style="opacity:1;fill:#FFFFFF;fill-opacity:1;fill-rule:nonzero;stroke:none;stroke-width:0.08356888;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;paint-order:fill markers stroke" d="m 8.4666477,282.71249 a 1.9071424,1.9071424 0 0 0 -1.5724381,0.82819 l -4.6707064,8.08985 a 1.9071424,1.9071424 0 0 0 0,1.6e-4 1.9071424,1.9071424 0 0 0 0.06893,1.77582 1.9071424,1.9071424 0 0 0 1.5235488,0.94764 h 9.301165 a 1.9071424,1.9071424 0 0 0 1.523711,-0.94764 1.9071424,1.9071424 0 0 0 0.06893,-1.77598 l -4.660603,-8.07242 a 1.9071424,1.9071424 0 0 0 -1.5825415,-0.84562 z"./></g></svg>
               </span>
                Watch how the stories are made
             </button>
@@ -119,70 +119,70 @@
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
                   <div class="story-img-box">
-                    <img src="/assets/media/images/photos/Stories/1.jpg" alt="Story" class="story-card-img">
+                    <img src="./assets/media/images/photos/Stories/1.jpg" alt="Story" class="story-card-img">
                   </div>
                   <div class="story-content-box">
                     <h6 class="story-name">John</h6>
                     <p class="story-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet</p>
-                    <a href="/pages/stories/story.html" class="story-link">
+                    <a href="./pages/stories/story.html" class="story-link">
                       Watch story
-                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M18.707,12.707l-3,3a1,1,0,0,1-1.414-1.414L15.586,13H6a1,1,0,0,1,0-2h9.586L14.293,9.707a1,1,0,0,1,1.414-1.414l3,3A1,1,0,0,1,18.707,12.707Z"/></g></svg>
+                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M18.707,12.707l-3,3a1,1,0,0,1-1.414-1.414L15.586,13H6a1,1,0,0,1,0-2h9.586L14.293,9.707a1,1,0,0,1,1.414-1.414l3,3A1,1,0,0,1,18.707,12.707Z"./></g></svg>
                     </a>
                   </div>
                   <div class="story-shadow"></div>
                 </div>
                 <div class="swiper-slide">
                   <div class="story-img-box">
-                    <img src="/assets/media/images/photos/Stories/2.jpg" alt="Story" class="story-card-img">
+                    <img src="./assets/media/images/photos/Stories/2.jpg" alt="Story" class="story-card-img">
                   </div>
                   <div class="story-content-box">
                     <h6 class="story-name">Kym</h6>
                     <p class="story-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet</p>
-                    <a href="/pages/stories/story.html" class="story-link">
+                    <a href="./pages/stories/story.html" class="story-link">
                       Watch story
-                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M18.707,12.707l-3,3a1,1,0,0,1-1.414-1.414L15.586,13H6a1,1,0,0,1,0-2h9.586L14.293,9.707a1,1,0,0,1,1.414-1.414l3,3A1,1,0,0,1,18.707,12.707Z"/></g></svg>
+                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M18.707,12.707l-3,3a1,1,0,0,1-1.414-1.414L15.586,13H6a1,1,0,0,1,0-2h9.586L14.293,9.707a1,1,0,0,1,1.414-1.414l3,3A1,1,0,0,1,18.707,12.707Z"./></g></svg>
                     </a>
                   </div>
                   <div class="story-shadow"></div>
                 </div>
                 <div class="swiper-slide">
                   <div class="story-img-box">
-                    <img src="/assets/media/images/photos/Stories/3.jpg" alt="Story" class="story-card-img">
+                    <img src="./assets/media/images/photos/Stories/3.jpg" alt="Story" class="story-card-img">
                   </div>
                   <div class="story-content-box">
                     <h6 class="story-name">Donna</h6>
                     <p class="story-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet</p>
-                    <a href="/pages/stories/story.html" class="story-link">
+                    <a href="./pages/stories/story.html" class="story-link">
                       Watch story
-                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M18.707,12.707l-3,3a1,1,0,0,1-1.414-1.414L15.586,13H6a1,1,0,0,1,0-2h9.586L14.293,9.707a1,1,0,0,1,1.414-1.414l3,3A1,1,0,0,1,18.707,12.707Z"/></g></svg>
+                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M18.707,12.707l-3,3a1,1,0,0,1-1.414-1.414L15.586,13H6a1,1,0,0,1,0-2h9.586L14.293,9.707a1,1,0,0,1,1.414-1.414l3,3A1,1,0,0,1,18.707,12.707Z"./></g></svg>
                     </a>
                   </div>
                   <div class="story-shadow"></div>
                 </div>
                 <div class="swiper-slide">
                   <div class="story-img-box">
-                    <img src="/assets/media/images/photos/Stories/1.jpg" alt="Story" class="story-card-img">
+                    <img src="./assets/media/images/photos/Stories/1.jpg" alt="Story" class="story-card-img">
                   </div>
                   <div class="story-content-box">
                     <h6 class="story-name">John</h6>
                     <p class="story-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet</p>
-                    <a href="/pages/stories/story.html" class="story-link">
+                    <a href="./pages/stories/story.html" class="story-link">
                       Watch story
-                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M18.707,12.707l-3,3a1,1,0,0,1-1.414-1.414L15.586,13H6a1,1,0,0,1,0-2h9.586L14.293,9.707a1,1,0,0,1,1.414-1.414l3,3A1,1,0,0,1,18.707,12.707Z"/></g></svg>
+                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M18.707,12.707l-3,3a1,1,0,0,1-1.414-1.414L15.586,13H6a1,1,0,0,1,0-2h9.586L14.293,9.707a1,1,0,0,1,1.414-1.414l3,3A1,1,0,0,1,18.707,12.707Z"./></g></svg>
                     </a>
                   </div>
                   <div class="story-shadow"></div>
                 </div>
                 <div class="swiper-slide">
                   <div class="story-img-box">
-                    <img src="/assets/media/images/photos/Stories/2.jpg" alt="Story" class="story-card-img">
+                    <img src="./assets/media/images/photos/Stories/2.jpg" alt="Story" class="story-card-img">
                   </div>
                   <div class="story-content-box">
                     <h6 class="story-name">John</h6>
                     <p class="story-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet</p>
-                    <a href="/pages/stories/story.html" class="story-link">
+                    <a href="./pages/stories/story.html" class="story-link">
                       Watch story
-                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M18.707,12.707l-3,3a1,1,0,0,1-1.414-1.414L15.586,13H6a1,1,0,0,1,0-2h9.586L14.293,9.707a1,1,0,0,1,1.414-1.414l3,3A1,1,0,0,1,18.707,12.707Z"/></g></svg>
+                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M18.707,12.707l-3,3a1,1,0,0,1-1.414-1.414L15.586,13H6a1,1,0,0,1,0-2h9.586L14.293,9.707a1,1,0,0,1,1.414-1.414l3,3A1,1,0,0,1,18.707,12.707Z"./></g></svg>
                     </a>
                   </div>
                   <div class="story-shadow"></div>
@@ -206,13 +206,13 @@
         <div class="section-wrapper">
           <ul class="events-container">
             <li class="event-box">
-              <a href="/pages/events/event.html" class="event-link">
+              <a href="./pages/events/event.html" class="event-link">
                 <div class="event-tag-bar">
                   <div class="event-tag">Conference</div>
                   <div class="event-tag tag-option-2">Online</div>
                 </div>
                 <div class="event-thumb-box">
-                  <img src="/assets/media/intro-poster.jpg" alt="Event" class="event-img">
+                  <img src="./assets/media/intro-poster.jpg" alt="Event" class="event-img">
                 </div>
                 <div class="event-content-box">
                   <h6 class="event-header">European Behavioural Pharmacology Society</h6>
@@ -224,13 +224,13 @@
             </li>
 
             <li class="event-box">
-              <a href="/pages/events/event.html" class="event-link">
+              <a href="./pages/events/event.html" class="event-link">
                 <div class="event-tag-bar">
                   <div class="event-tag">Event</div>
                   <div class="event-tag tag-option-1">In Person</div>
                 </div>
                 <div class="event-thumb-box">
-                  <img src="/assets/media/intro-poster.jpg" alt="Event" class="event-img">
+                  <img src="./assets/media/intro-poster.jpg" alt="Event" class="event-img">
                 </div>
                 <div class="event-content-box">
                   <h6 class="event-header">Kitchen Table Night</h6>
@@ -242,13 +242,13 @@
             </li>
 
             <li class="event-box">
-              <a href="/pages/events/event.html" class="event-link">
+              <a href="./pages/events/event.html" class="event-link">
                 <div class="event-tag-bar">
                   <div class="event-tag">Event</div>
                   <div class="event-tag tag-option-1">In Person</div>
                 </div>
                 <div class="event-thumb-box">
-                  <img src="/assets/media/intro-poster.jpg" alt="Event" class="event-img">
+                  <img src="./assets/media/intro-poster.jpg" alt="Event" class="event-img">
                 </div>
                 <div class="event-content-box">
                   <h6 class="event-header">Science in the Cinema</h6>
@@ -260,13 +260,13 @@
             </li>
 
             <li class="event-box">
-              <a href="/pages/events/event.html" class="event-link">
+              <a href="./pages/events/event.html" class="event-link">
                 <div class="event-tag-bar">
                   <div class="event-tag">Conference</div>
                   <div class="event-tag tag-option-1">In Person</div>
                 </div>
                 <div class="event-thumb-box">
-                  <img src="/assets/media/intro-poster.jpg" alt="Event" class="event-img">
+                  <img src="./assets/media/intro-poster.jpg" alt="Event" class="event-img">
                 </div>
                 <div class="event-content-box">
                   <h6 class="event-header">Manitoba Harm Reduction Network</h6>
@@ -278,13 +278,13 @@
             </li>
 
             <li class="event-box">
-              <a href="/pages/events/event.html" class="event-link">
+              <a href="./pages/events/event.html" class="event-link">
                 <div class="event-tag-bar">
                   <div class="event-tag">Conference</div>
                   <div class="event-tag tag-option-2">Online</div>
                 </div>
                 <div class="event-thumb-box">
-                  <img src="/assets/media/intro-poster.jpg" alt="Event" class="event-img">
+                  <img src="./assets/media/intro-poster.jpg" alt="Event" class="event-img">
                 </div>
                 <div class="event-content-box">
                   <h6 class="event-header">Harm Reduction International in Bogota</h6>
@@ -305,7 +305,7 @@
           <h5 class="content-header">In Spring 2024, nine young adults created their own short films about cannabis use and harm reduction</h5>
           <button type="button" class="primary-btn with-l-ico watch-intro">
             <span class="btn-ico-left">
-              <svg xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16.933333 21.1666675" version="1.1" x="0px" y="0px"><g transform="translate(0,-280.06665)"><path style="opacity:1;fill:#FFFFFF;fill-opacity:1;fill-rule:nonzero;stroke:none;stroke-width:0.08356888;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;paint-order:fill markers stroke" d="m 8.4666477,282.71249 a 1.9071424,1.9071424 0 0 0 -1.5724381,0.82819 l -4.6707064,8.08985 a 1.9071424,1.9071424 0 0 0 0,1.6e-4 1.9071424,1.9071424 0 0 0 0.06893,1.77582 1.9071424,1.9071424 0 0 0 1.5235488,0.94764 h 9.301165 a 1.9071424,1.9071424 0 0 0 1.523711,-0.94764 1.9071424,1.9071424 0 0 0 0.06893,-1.77598 l -4.660603,-8.07242 a 1.9071424,1.9071424 0 0 0 -1.5825415,-0.84562 z"/></g></svg>
+              <svg xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16.933333 21.1666675" version="1.1" x="0px" y="0px"><g transform="translate(0,-280.06665)"><path style="opacity:1;fill:#FFFFFF;fill-opacity:1;fill-rule:nonzero;stroke:none;stroke-width:0.08356888;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;paint-order:fill markers stroke" d="m 8.4666477,282.71249 a 1.9071424,1.9071424 0 0 0 -1.5724381,0.82819 l -4.6707064,8.08985 a 1.9071424,1.9071424 0 0 0 0,1.6e-4 1.9071424,1.9071424 0 0 0 0.06893,1.77582 1.9071424,1.9071424 0 0 0 1.5235488,0.94764 h 9.301165 a 1.9071424,1.9071424 0 0 0 1.523711,-0.94764 1.9071424,1.9071424 0 0 0 0.06893,-1.77598 l -4.660603,-8.07242 a 1.9071424,1.9071424 0 0 0 -1.5825415,-0.84562 z"./></g></svg>
             </span>
              Watch how the stories are made
           </button>
@@ -396,10 +396,10 @@
     </footer>
 
 
-    <script src="/assets/js/utils/jquery-3.7.1.min.js"></script>
+    <script src="./assets/js/utils/jquery-3.7.1.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="/assets/js/utils/plugins-setup.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="./assets/js/utils/plugins-setup.js"></script>
+    <script src="./assets/js/main.js"></script>
 </body>
 </html>
