Pages source fix

--- a/pages/events/event.html
+++ b/pages/events/event.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>European Behavioural Pharmacology Society</title>
 
-    <link rel="shortcut icon" type="image/x-icon" href="./assets/media/images/utils/favicon.ico"./>
-    <link rel="stylesheet" href="./assets/css/all.min.css"./>
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/media/images/utils/favicon.ico"/>
+    <link rel="stylesheet" href="/assets/css/all.min.css"/>
 </head>
 <body>
 
@@ -17,8 +17,8 @@
     <div class="section-wrapper medium-wrapper">
       <nav aria-label="Breadcrumb" class="breadcrumbs">
         <ol>
-          <li><a href="./">Home</a></li>
-          <li><a href="./#events-section">Events</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/#events-section">Events</a></li>
           <li aria-current="page">European Behavioural Pharmacology Society</li>
         </ol>
       </nav>
@@ -27,7 +27,7 @@
     <header class="event-header-container">
 
       <div class="event-header-box">
-        <img src="./assets/media/intro-poster.jpg" alt="Event Thumb">
+        <img src="/assets/media/intro-poster.jpg" alt="Event Thumb">
       </div>
 
       <h2>European Behavioural Pharmacology Society</h2>
@@ -137,8 +137,8 @@
       </footer>
 
 
-      <script src="./assets/js/utils/jquery-3.7.1.min.js"></script>
-      <script src="./assets/js/main.js"></script>
+      <script src="/assets/js/utils/jquery-3.7.1.min.js"></script>
+      <script src="/assets/js/main.js"></script>
     
 </body>
 </html>
