--- a/pages/resources.html
+++ b/pages/resources.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resources</title>
 
-    <link rel="shortcut icon" type="image/x-icon" href="./assets/media/images/utils/favicon.ico"./>
-    <link rel="stylesheet" href="./assets/css/all.min.css"./>
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/media/images/utils/favicon.ico"/>
+    <link rel="stylesheet" href="/assets/css/all.min.css"/>
 </head>
 <body>
 
@@ -24,7 +24,7 @@
       <div class="section-wrapper medium-wrapper">
         <nav aria-label="Breadcrumb" class="breadcrumbs with-padding">
           <ol>
-            <li><a href="./">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li aria-current="page">Resources</li>
           </ol>
         </nav>
@@ -135,8 +135,8 @@
       </footer>
 
 
-      <script src="./assets/js/utils/jquery-3.7.1.min.js"></script>
-      <script src="./assets/js/main.js"></script>
+      <script src="/assets/js/utils/jquery-3.7.1.min.js"></script>
+      <script src="/assets/js/main.js"></script>
     
 </body>
 </html>
