--- a/pages/stories/story.html
+++ b/pages/stories/story.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lucky Story</title>
 
-    <link rel="shortcut icon" type="image/x-icon" href="./assets/media/images/utils/favicon.ico"./>
-    <link rel="stylesheet" href="./assets/css/all.min.css"./>
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/media/images/utils/favicon.ico"/>
+    <link rel="stylesheet" href="/assets/css/all.min.css"/>
 </head>
 <body>
 
@@ -16,10 +16,10 @@
 
     <header id="intro-section" class="header-section story-header">
 
-      <a href="./" class="back-home">Back to Home</a>
+      <a href="/" class="back-home">Back to Home</a>
 
-      <video id="intro-video" class="intro-video-box" preload="auto" poster="./assets/media/intro-poster.jpg" loop>
-        <source src="./assets/media/videos/Intro-Video.mp4" type="video/mp4">
+      <video id="intro-video" class="intro-video-box" preload="auto" poster="/assets/media/intro-poster.jpg" loop>
+        <source src="/assets/media/videos/Intro-Video.mp4" type="video/mp4">
         Your browser does not support the video tag. 
       </video>
 
@@ -45,8 +45,8 @@
       <div class="section-wrapper medium-wrapper">
         <nav aria-label="Breadcrumb" class="breadcrumbs">
           <ol>
-            <li><a href="./">Home</a></li>
-            <li><a href="./#stories-section">Stories</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/#stories-section">Stories</a></li>
             <li aria-current="page">Lucky Story</li>
           </ol>
         </nav>
@@ -140,9 +140,9 @@
       </footer>
 
 
-      <script src="./assets/js/utils/jquery-3.7.1.min.js"></script>
-      <script src="./assets/js/utils/plugins-setup.js"></script>
-      <script src="./assets/js/main.js"></script>
+      <script src="/assets/js/utils/jquery-3.7.1.min.js"></script>
+      <script src="/assets/js/utils/plugins-setup.js"></script>
+      <script src="/assets/js/main.js"></script>
     
 </body>
 </html>
