--- a/pages/resources.html
+++ b/pages/resources.html
@@ -29,25 +29,28 @@
           </ol>
         </nav>
 
-
+        <h3 class="page-description">
+          Want to learn more about youth and cannabis harm reduction? <br> Start here with these harm reduction friendly education resources: 
+        </h3>
+        
         <ul class="link-container">
           <li>
-            <a href="https://getsensible.org/resources/" target="_blank" class="source-link">Cannabis Education Toolkits, Zines, & More</a>
+            <a href="https://getsensible.org/resources/" target="_blank" class="source-link">Get Sensible!</a>
           </li>
           <li>
-            <a href="https://kiralondonnadeau.com/research/zine/" target="_blank" class="source-link">Queer & Trans Cannabis Use & Mental Health Zine </a>
+            <a href="https://www.cpha.ca/cannabasics" target="_blank" class="source-link">Cannabasics</a>
           </li>
           <li>
-            <a href="https://sciencedirect.com/science/article/pii/S095539592400152X" target="_blank" class="source-link">This is your brain on drug education: Putting young people with lived experience at the center of drug education</a>
+            <a href="https://cannabisandmentalhealth.ca/" target="_blank" class="source-link">Cannabis & Mental Health </a>
           </li>
           <li>
-            <a href="https://voxcann.org/post/videos-for-mental-health-providers" target="_blank" class="source-link">What Queer & Trans youth who use cannabis wish their healthcare providers knew</a>
+            <a href="https://www.voxcann.org/" target="_blank" class="source-link">VoxCann</a>
           </li>
           <li>
-            <a href="https://sciencedirect.com/science/article/pii/S095539592400197X" target="_blank" class="source-link">A strengths-based qualitative study of cannabis use among queer and trans</a>
+            <a href="https://www.weedoutmisinformation.ca/" target="_blank" class="source-link">Weed Out Misinformation </a>
           </li>
           <li>
-            <a href="https://sciencedirect.com/science/article/pii/S0955395924001919" target="_blank" class="source-link">Barriers and opportunities in community-led cannabis research: Group reflections from a queer and trans youth-led research project</a>
+            <a href="https://youthrex.com/whats-with-weed/" target="_blank" class="source-link">YouthREX – What's with weed?  </a>
           </li>
         </ul>
 
@@ -57,82 +60,67 @@
 
     
     <footer class="footer" id="footer">
+      <div class="section-wrapper">
+        <div class="footer-container">
+          <div class="nav-logo">
+            <img class="logo-img" src="../assets/media/images/logo.png" alt="YouthHarmReduction"/>
+          </div>
 
-        <div class="section-wrapper">
-  
-          <div class="footer-container">
-            <div class="nav-logo">
-              <h3 class="logo-text">Youth Harm Reduction</h3>
-              <!-- <img src="assets/images/logo.png" alt="YouthHarmReduction" /> -->
-            </div>
-  
-            <div class="mail-container">
-              <h6 class="container-header">Send us an Email</h6>
-  
-              <div class="mail-box">
-                <a href="mailto:rebecca.saah@ucalgary.ca" class="email-link">
-                  <span class="email-ico">
-                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" viewBox="0 0 48 48">
-                      <path d="M 10 8 C 6.86 8 4.2795313 10.42 4.0195312 13.5 L 24 24.289062 L 43.980469 13.5 C 43.720469 10.42 41.14 8 38 8 L 10 8 z M 4 16.890625 L 4 34 C 4 37.31 6.69 40 10 40 L 38 40 C 41.31 40 44 37.31 44 34 L 44 16.890625 L 24.710938 27.320312 C 24.490938 27.440312 24.25 27.5 24 27.5 C 23.75 27.5 23.509062 27.440313 23.289062 27.320312 L 4 16.890625 z"></path>
-                    </svg>
-                  </span>
-                  rebecca.saah@ucalgary.ca
-                </a>
-                <button type="button" class="copy-mail">
-                  <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 48 48">
-                    <path d="M 18.5 5 C 15.480226 5 13 7.4802259 13 10.5 L 13 32.5 C 13 35.519774 15.480226 38 18.5 38 L 34.5 38 C 37.519774 38 40 35.519774 40 32.5 L 40 10.5 C 40 7.4802259 37.519774 5 34.5 5 L 18.5 5 z M 18.5 8 L 34.5 8 C 35.898226 8 37 9.1017741 37 10.5 L 37 32.5 C 37 33.898226 35.898226 35 34.5 35 L 18.5 35 C 17.101774 35 16 33.898226 16 32.5 L 16 10.5 C 16 9.1017741 17.101774 8 18.5 8 z M 11 10 L 9.78125 10.8125 C 8.66825 11.5545 8 12.803625 8 14.140625 L 8 33.5 C 8 38.747 12.253 43 17.5 43 L 30.859375 43 C 32.197375 43 33.4465 42.33175 34.1875 41.21875 L 35 40 L 17.5 40 C 13.91 40 11 37.09 11 33.5 L 11 10 z"></path>
+          <div class="mail-container">
+            <h6 class="container-header">Send us an Email</h6>
+
+            <div class="mail-box">
+              <a href="mailto:rebecca.saah@ucalgary.ca" class="email-link">
+                <span class="email-ico">
+                  <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" viewBox="0 0 48 48">
+                    <path
+                      d="M 10 8 C 6.86 8 4.2795313 10.42 4.0195312 13.5 L 24 24.289062 L 43.980469 13.5 C 43.720469 10.42 41.14 8 38 8 L 10 8 z M 4 16.890625 L 4 34 C 4 37.31 6.69 40 10 40 L 38 40 C 41.31 40 44 37.31 44 34 L 44 16.890625 L 24.710938 27.320312 C 24.490938 27.440312 24.25 27.5 24 27.5 C 23.75 27.5 23.509062 27.440313 23.289062 27.320312 L 4 16.890625 z"></path>
                   </svg>
-  
-                  <span class="copy-success">Mail Copied!</span>
-                </button>
-              </div>
-            </div>
-  
-            <div class="social-container">
-              <h6 class="container-header">Or subscribe on our social networks</h6>
-  
-              <ul class="social-box">
-                <li>
-                  <a href="https://www.youtube.com/" class="social-link">
-                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" viewBox="0 0 50 50">
-                      <path d="M 44.898438 14.5 C 44.5 12.300781 42.601563 10.699219 40.398438 10.199219 C 37.101563 9.5 31 9 24.398438 9 C 17.800781 9 11.601563 9.5 8.300781 10.199219 C 6.101563 10.699219 4.199219 12.199219 3.800781 14.5 C 3.398438 17 3 20.5 3 25 C 3 29.5 3.398438 33 3.898438 35.5 C 4.300781 37.699219 6.199219 39.300781 8.398438 39.800781 C 11.898438 40.5 17.898438 41 24.5 41 C 31.101563 41 37.101563 40.5 40.601563 39.800781 C 42.800781 39.300781 44.699219 37.800781 45.101563 35.5 C 45.5 33 46 29.398438 46.101563 25 C 45.898438 20.5 45.398438 17 44.898438 14.5 Z M 19 32 L 19 18 L 31.199219 25 Z"></path>
-                    </svg>
-                  </a>
-                </li>
-                <li>
-                  <a href="https://www.linkedin.com/" class="social-link">
-                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="64" height="64" viewBox="0 0 64 64">
-                      <path d="M32,6C17.641,6,6,17.641,6,32c0,14.359,11.641,26,26,26s26-11.641,26-26C58,17.641,46.359,6,32,6z M25,44h-5V26h5V44z M22.485,24h-0.028C20.965,24,20,22.888,20,21.499C20,20.08,20.995,19,22.514,19c1.521,0,2.458,1.08,2.486,2.499 C25,22.887,24.035,24,22.485,24z M44,44h-5v-9c0-3-1.446-4-3-4c-1.445,0-3,1-3,4v9h-5V26h5v3c0.343-0.981,1.984-3,5-3c4,0,6,3,6,8 V44z"></path>
-                    </svg>
-                  </a>
-                </li>
-                <li>
-                  <a href="https://www.facebook.com/" class="social-link">
-                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" viewBox="0 0 50 50">
-                      <path d="M25,3C12.85,3,3,12.85,3,25c0,11.03,8.125,20.137,18.712,21.728V30.831h-5.443v-5.783h5.443v-3.848 c0-6.371,3.104-9.168,8.399-9.168c2.536,0,3.877,0.188,4.512,0.274v5.048h-3.612c-2.248,0-3.033,2.131-3.033,4.533v3.161h6.588 l-0.894,5.783h-5.694v15.944C38.716,45.318,47,36.137,47,25C47,12.85,37.15,3,25,3z"></path>
-                    </svg>
-                  </a>
-                </li>
-                <li>
-                  <a href="https://www.instagram.com/" class="social-link">
-                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 30 30">
-                      <path d="M 9.9980469 3 C 6.1390469 3 3 6.1419531 3 10.001953 L 3 20.001953 C 3 23.860953 6.1419531 27 10.001953 27 L 20.001953 27 C 23.860953 27 27 23.858047 27 19.998047 L 27 9.9980469 C 27 6.1390469 23.858047 3 19.998047 3 L 9.9980469 3 z M 22 7 C 22.552 7 23 7.448 23 8 C 23 8.552 22.552 9 22 9 C 21.448 9 21 8.552 21 8 C 21 7.448 21.448 7 22 7 z M 15 9 C 18.309 9 21 11.691 21 15 C 21 18.309 18.309 21 15 21 C 11.691 21 9 18.309 9 15 C 9 11.691 11.691 9 15 9 z M 15 11 A 4 4 0 0 0 11 15 A 4 4 0 0 0 15 19 A 4 4 0 0 0 19 15 A 4 4 0 0 0 15 11 z"></path>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
-  
+                </span>
+                rebecca.saah@ucalgary.ca
+              </a>
+              <button type="button" class="copy-mail">
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 48 48">
+                  <path d="M 18.5 5 C 15.480226 5 13 7.4802259 13 10.5 L 13 32.5 C 13 35.519774 15.480226 38 18.5 38 L 34.5 38 C 37.519774 38 40 35.519774 40 32.5 L 40 10.5 C 40 7.4802259 37.519774 5 34.5 5 L 18.5 5 z M 18.5 8 L 34.5 8 C 35.898226 8 37 9.1017741 37 10.5 L 37 32.5 C 37 33.898226 35.898226 35 34.5 35 L 18.5 35 C 17.101774 35 16 33.898226 16 32.5 L 16 10.5 C 16 9.1017741 17.101774 8 18.5 8 z M 11 10 L 9.78125 10.8125 C 8.66825 11.5545 8 12.803625 8 14.140625 L 8 33.5 C 8 38.747 12.253 43 17.5 43 L 30.859375 43 C 32.197375 43 33.4465 42.33175 34.1875 41.21875 L 35 40 L 17.5 40 C 13.91 40 11 37.09 11 33.5 L 11 10 z" ></path>
+                </svg>
+
+                <span class="copy-success">Mail Copied!</span>
+              </button>
             </div>
           </div>
-  
-  
+
+          <div class="social-container">
+            <h6 class="container-header">
+              Or subscribe on our social networks
+            </h6>
+
+            <ul class="social-box">
+              <li>
+                <a href="https://www.youtube.com/@seethelivesproject1832/featured" class="social-link" >
+                  <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" viewBox="0 0 50 50" >
+                    <path d="M 44.898438 14.5 C 44.5 12.300781 42.601563 10.699219 40.398438 10.199219 C 37.101563 9.5 31 9 24.398438 9 C 17.800781 9 11.601563 9.5 8.300781 10.199219 C 6.101563 10.699219 4.199219 12.199219 3.800781 14.5 C 3.398438 17 3 20.5 3 25 C 3 29.5 3.398438 33 3.898438 35.5 C 4.300781 37.699219 6.199219 39.300781 8.398438 39.800781 C 11.898438 40.5 17.898438 41 24.5 41 C 31.101563 41 37.101563 40.5 40.601563 39.800781 C 42.800781 39.300781 44.699219 37.800781 45.101563 35.5 C 45.5 33 46 29.398438 46.101563 25 C 45.898438 20.5 45.398438 17 44.898438 14.5 Z M 19 32 L 19 18 L 31.199219 25 Z" ></path>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/CannabisHarmRedux" class="social-link">
+                  <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 30 30" >
+                    <path d="M 9.9980469 3 C 6.1390469 3 3 6.1419531 3 10.001953 L 3 20.001953 C 3 23.860953 6.1419531 27 10.001953 27 L 20.001953 27 C 23.860953 27 27 23.858047 27 19.998047 L 27 9.9980469 C 27 6.1390469 23.858047 3 19.998047 3 L 9.9980469 3 z M 22 7 C 22.552 7 23 7.448 23 8 C 23 8.552 22.552 9 22 9 C 21.448 9 21 8.552 21 8 C 21 7.448 21.448 7 22 7 z M 15 9 C 18.309 9 21 11.691 21 15 C 21 18.309 18.309 21 15 21 C 11.691 21 9 18.309 9 15 C 9 11.691 11.691 9 15 9 z M 15 11 A 4 4 0 0 0 11 15 A 4 4 0 0 0 15 19 A 4 4 0 0 0 19 15 A 4 4 0 0 0 15 11 z"></path>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-  
-        <div class="footer-copyright">
-          All rights reserved &copy;&thinsp;
-          <span class="copyright-year">2024</span>
-        </div>
-      </footer>
+      </div>
+      <div class="fund-banner">
+        <p>
+          This project was supported by an arm's length research grant from the
+          Ontario Cannabis Store’s Social Impact Fund (Government of Ontario)
+        </p>
+      </div>
+
+    </footer>
 
 
       <script src="/assets/js/utils/jquery-3.7.1.min.js"></script>
